# rusty-weather

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
crates/rustwx-calc/: Cargo.toml  README.md
crates/rustwx-calc/src/: derived.rs  ecape.rs  error.rs  lib.rs  mesoanalysis.rs  severe.rs  windowed.rs
crates/rustwx-calc/src/mesoanalysis/: tests.rs
crates/rustwx-calc/src/severe/: tests.rs
crates/rustwx-calc/tests/: wrappers.rs
crates/rustwx-contour/: Cargo.toml  README.md
crates/rustwx-contour/src/: engine.rs  levels.rs  lib.rs
crates/rustwx-core/: Cargo.toml
crates/rustwx-core/src/: lib.rs  tests.rs
crates/rustwx-io/: Cargo.toml  README.md
crates/rustwx-io/src/: cache.rs  lib.rs  tests.rs
crates/rustwx-models/: Cargo.toml  README.md
crates/rustwx-models/src/: lib.rs  tests.rs
crates/rustwx-products/: Cargo.toml  README.md
crates/rustwx-products/src/: cache.rs  catalog.rs  derived.rs  direct.rs  ecape.rs  gridded.rs  heavy.rs  hrrr.rs  lib.rs  named_geometry.rs  non_ecape.rs  places.rs  planner.rs  plot_design.rs  point_timeseries.rs  publication.rs  qpf.rs  runtime.rs  sampling.rs  severe.rs  shared_context.rs  source.rs  spec.rs  tests.rs  thermo_native.rs  viewer.rs  windowed.rs  windowed_decoder.rs
crates/rustwx-products/src/catalog/: tests.rs
crates/rustwx-products/src/derived/: compute.rs  inventory.rs  planning.rs  presentation.rs  query.rs  recipes.rs  store.rs  store_render.rs  tests.rs  types.rs
crates/rustwx-products/src/direct/: batch.rs  composite.rs  domain.rs  fetch.rs  planning.rs  projection.rs  query.rs  rendering.rs  tests.rs  titles.rs  types.rs
crates/rustwx-products/src/gridded/: crop.rs  fetch.rs  tests.rs
crates/rustwx-products/src/non_ecape/: manifest.rs  summary.rs  tests.rs  types.rs
crates/rustwx-products/src/places/: tests.rs
crates/rustwx-products/src/runtime/: tests.rs
crates/rustwx-products/src/windowed/: tests.rs
crates/rustwx-products/src/windowed_decoder/: tests.rs
crates/rustwx-products/tests/: product_catalog_inventory.rs
crates/rustwx-products/tests/fixtures/: product_catalog_inventory_v1.json
crates/rustwx-regrid/: Cargo.toml  README.md
crates/rustwx-regrid/examples/: basic_regrid.rs
crates/rustwx-regrid/src/: bilinear.rs  conservative.rs  error.rs  grid.rs  idw.rs  lib.rs  method.rs  nearest.rs  plan.rs  vector.rs  weights.rs
crates/rustwx-render/: Cargo.toml
crates/rustwx-render/examples/: demo_basemap.rs  demo_map.rs  demo_panel_presets.rs
crates/rustwx-render/src/: colorbar.rs  colormap.rs  colormaps.rs  contour_fill.rs  features.rs  lib.rs  overlay.rs  panel.rs  presentation.rs  projected_map.rs  projection.rs  rasterize.rs  render.rs  request.rs  tests.rs  text.rs  weather.rs
crates/rustwx-render/src/panel/: tests.rs
crates/rustwx-render/src/render/: tests.rs
crates/rustwx-render/src/weather/: tests.rs
crates/rustwx-render/tests/: viewer_seams.rs
crates/rustwx-render/verify/: Cargo.toml  README.md
crates/rustwx-render/verify/examples/: synthetic_contour_alignment.rs  synthetic_panel.rs  synthetic_sbecape.rs
crates/rustwx-render/verify/src/: lib.rs
crates/rustwx-render/verify/tests/: repo_doc_alignment.rs  weather_native_plot_engine.rs
crates/rustwx-sounding/: Cargo.toml  README.md
crates/rustwx-sounding/examples/: calc_raw_sounding.rs  demo_sounding.rs  demo_sounding_with_external_ecape.rs
crates/rustwx-sounding/src/: bridge.rs  ecape.rs  error.rs  lib.rs  native_table.rs
crates/rustwx-sounding/tests/: bridge.rs
crates/rusty-weather/: Cargo.toml  build.rs
crates/rusty-weather-ui/: Cargo.toml
crates/rusty-weather-ui/src/: ingest_worker.rs  main.rs  profiler.rs  sat_worker.rs
crates/rusty-weather/src/: contour_mode.rs  domain.rs  ingest_compute.rs  ingest_hour.rs  ingest_profile.rs  main.rs  region.rs  render_all.rs  size_estimate.rs  store_render.rs  throttle.rs  windowed_store.rs
crates/rusty-weather/tests/: ingest_compute_derived.rs  ingest_compute_heavy.rs  rw_store_e2e.rs
crates/rusty-weather/tests/fixtures/: README.md
crates/rw-glm/: Cargo.toml
crates/rw-glm/src/: error.rs  follow.rs  format.rs  granule.rs  lib.rs  reader.rs  s3.rs  store.rs  validate.rs  window.rs
crates/rw-glm/tests/: follow.rs  golden.rs  granule_decode.rs  store_reader.rs
crates/rw-glm/tests/fixtures/: OR_GLM-L2-LCFA_G19_s20261620805000_e20261620805200_c20261620805214.nc  README.md
crates/rw-glm/tests/golden/v1/: expected.json  t0000.rwl  t0010.rwl  t0020.rwl
crates/rw-ingest/: Cargo.toml
crates/rw-ingest/src/: events.rs  ingest_compute.rs  ingest_hour.rs  ingest_profile.rs  lib.rs  size_estimate.rs  throttle.rs
crates/rw-ingest/tests/: ingest_compute_derived.rs  ingest_compute_heavy.rs
crates/rw-sat/: Cargo.toml
crates/rw-sat/src/: abi.rs  composite.rs  events.rs  export.rs  follow.rs  geostationary.rs  goes.rs  lib.rs  netcdf.rs  palette.rs  s3.rs  store.rs  window.rs
crates/rw-store/: Cargo.toml
crates/rw-store/src/: atomic.rs  codec.rs  diff.rs  error.rs  export.rs  format.rs  grid.rs  header.rs  index.rs  ingest.rs  lib.rs  lock.rs  netcdf3.rs  reader.rs  run.rs  validate.rs  writer.rs
crates/rw-store/tests/: golden.rs  ingest_roundtrip.rs  pressure3d.rs
crates/rw-store/tests/golden/v1/: expected.json  f000.rws  grid.rwg  run.json
crates/rw-ui/: Cargo.toml
crates/rw-ui/src/: colormap.rs  lib.rs  skewt.rs  stats.rs  store_view.rs  synthetic.rs  worker.rs
crates/rw-ui/src/panels/: download.rs  field_viewer.rs  mod.rs  run_browser.rs  sat_player.rs  satellite.rs  sounding.rs
crates/rw-ui/tests/: production_style.rs  store_view.rs
docs/: DETERMINISM.md  FORMAT.md  STREAMING.md
docs/superpowers/plans/: 2026-06-09-plan-2-rw-store.md  2026-06-09-plan-3-all-products.md  2026-06-09-rusty-weather-extraction.md  2026-06-10-rw-store-hardening.md  2026-06-11-gfs-support.md  2026-06-11-glm-lightning.md  2026-06-11-rrfs-support.md
docs/superpowers/specs/: 2026-06-09-rusty-weather-design.md  2026-06-11-glm-lightning-draft.md
scripts/: determinism_check.ps1
