[workspace]
members = [
    "crates/rw-store",
    "crates/rustwx-calc",
    "crates/rustwx-contour",
    "crates/rustwx-core",
    "crates/rustwx-io",
    "crates/rustwx-models",
    "crates/rustwx-products",
    "crates/rustwx-regrid",
    "crates/rustwx-render",
    "crates/rustwx-sounding",
    "crates/rusty-weather",
]
exclude = [
    "vendor/ecape-rs",
    "vendor/grib-core",
    "vendor/metrust",
    "vendor/sharprs",
    "vendor/wx-core",
    "vendor/wx-field",
    "vendor/wx-radar",
    "vendor/wx-math",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
publish = false
rust-version = "1.85"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
rayon = "1"
rustls = { version = "0.23", default-features = false, features = ["std"] }
rustls-rustcrypto = "0.0.2-alpha"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ureq = { version = "3", default-features = false, features = ["rustls-no-provider", "rustls-webpki-roots"] }

[profile.release]
lto = "thin"
codegen-units = 1
