[package]
name = "rustwx-calc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
rayon.workspace = true
serde.workspace = true
rustwx-core = { path = "../rustwx-core" }
metrust = { path = "../../vendor/metrust" }
