[package]
name = "rustwx-io"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = []

[dependencies]
bincode = "1.3"
grib-core = { path = "../../vendor/grib-core" }
memmap2 = "0.9"
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rustwx-core = { path = "../rustwx-core" }
rustwx-models = { path = "../rustwx-models" }
wx-core = { path = "../../vendor/wx-core", default-features = false, features = ["network"] }

[dev-dependencies]
chrono = { version = "0.4", default-features = false }
