[package]
name = "rustwx-models"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
rayon.workspace = true
rustls.workspace = true
rustls-rustcrypto.workspace = true
serde.workspace = true
thiserror.workspace = true
ureq.workspace = true
rustwx-core = { path = "../rustwx-core" }
