[package]
name = "rusty-weather-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
description = "Native egui shell mounting the rw-ui store browser/viewer panels"

[dependencies]
eframe = "0.34"
egui = "0.34"
rw-ui = { path = "../rw-ui" }
