[package]
name = "rusty-weather"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
default-run = "rusty-weather"

[dependencies]
clap.workspace = true
# Global allocator for the ingest binary: the derived CAPE kernels allocate
# per-column scratch across every rayon thread; mimalloc handles that churn
# better than the default Windows heap (~10% on the derived stage, ~15% on
# GRIB extraction, measured on the 32-thread dev box).
mimalloc = "0.1"
rayon.workspace = true
serde_json.workspace = true
rustwx-core = { path = "../rustwx-core" }
rustwx-io = { path = "../rustwx-io" }
rustwx-models = { path = "../rustwx-models" }
rustwx-products = { path = "../rustwx-products" }
rustwx-render = { path = "../rustwx-render" }
rw-store = { path = "../rw-store" }

[dev-dependencies]
# The ingest derived-precompute test proves the wiring by calling the
# underlying calc kernels directly with identically prepared inputs.
rustwx-calc = { path = "../rustwx-calc" }
