[package]
name = "rusty-weather"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
default-run = "rusty-weather"

[dependencies]
clap.workspace = true
# Global allocator for the ingest binary: the derived CAPE kernels allocate
# per-column scratch across every rayon thread; mimalloc handles that churn
# better than the default Windows heap (~10% on the derived stage, ~15% on
# GRIB extraction, measured on the 32-thread dev box).
mimalloc = "0.1"
# mi_option_set: the ingest bins disable mimalloc's purge delay so freed
# decode/compute segments decommit immediately — with the default 10 ms
# batched purge, a full-profile ingest's working-set PEAK measured ~1.3 GB
# above its live set (purge lagging the 0.5 GB/s allocation bursts). Same
# crate the mimalloc allocator wraps, so this adds a feature, not a build.
libmimalloc-sys = { version = "0.1", features = ["extended"] }
rayon.workspace = true
serde_json.workspace = true
rustwx-core = { path = "../rustwx-core" }
rustwx-io = { path = "../rustwx-io" }
rustwx-models = { path = "../rustwx-models" }
rustwx-products = { path = "../rustwx-products" }
rustwx-render = { path = "../rustwx-render" }
rw-ingest = { path = "../rw-ingest" }
rw-store = { path = "../rw-store" }

# Polite-mode priority drop (src/throttle.rs): windows-sys is already in
# the tree transitively (clap's anstyle stack pulls 0.61), so this adds one
# feature, not a new crate. Win32_System_Threading carries
# GetCurrentProcess / SetPriorityClass / BELOW_NORMAL_PRIORITY_CLASS plus
# GetProcessTimes (rw_batch's per-stage CPU accounting); Win32_Foundation
# carries the FILETIME it fills.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[dev-dependencies]
# The ingest derived-precompute test proves the wiring by calling the
# underlying calc kernels directly with identically prepared inputs.
rustwx-calc = { path = "../rustwx-calc" }
