[package]
name = "rw-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
description = "Reusable egui panels for browsing and viewing rw-store weather data (no eframe dependency)"

[dependencies]
egui = "0.34"
egui_plot = "0.35"
rw-store = { path = "../rw-store" }
rustwx-core = { path = "../rustwx-core" }
serde_json.workspace = true
