[package]
name = "rw-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
description = "Reusable egui panels for browsing and viewing rw-store weather data (no eframe dependency)"

[dependencies]
egui = "0.34"
image = { version = "0.25", default-features = false, features = ["png"] }
rw-store = { path = "../rw-store" }
rustwx-core = { path = "../rustwx-core" }
rustwx-sounding = { path = "../rustwx-sounding" }
serde_json.workspace = true
